# RP2040-HAT-C-Edit

./: CMakeLists.txt  README.md  getting_started.md  rp2040_hat_c-patch.cmake  rp2040_hat_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/dhcp_dns/: CMakeLists.txt  README.md  w5x00_dhcp_dns.c
examples/ftp/client/: CMakeLists.txt  README.md  w5x00_ftp_client.c
examples/ftp/server/: CMakeLists.txt  README.md  w5x00_ftp_server.c
examples/http/server/: CMakeLists.txt  README.md  w5x00_http_server.c
examples/loopback/: CMakeLists.txt  README.md  tcp_echoserver.c  tcp_echoserver.h  w5x00_loopback.c
examples/lwiperf/: CMakeLists.txt  README.md  w5x00_lwiperf.c
examples/mqtt/publish/: CMakeLists.txt  README.md  w5x00_mqtt_publish.c
examples/mqtt/publish_subscribe/: w5x00_mqtt_publish_subscribe.c
examples/mqtt/subscribe/: CMakeLists.txt  README.md  w5x00_mqtt_subscribe.c
examples/sntp/: CMakeLists.txt  README.md  w5x00_sntp.c
examples/tcp_client_over_ssl/: CMakeLists.txt  README.md  w5x00_tcp_client_over_ssl.c
libraries/: CMakeLists.txt
libraries/ioLibrary_Driver/: CMakeLists.txt
libraries/ioLibrary_Driver/Application/: CMakeLists.txt
libraries/ioLibrary_Driver/Application/loopback/: CMakeLists.txt
libraries/ioLibrary_Driver/Ethernet/: CMakeLists.txt
libraries/ioLibrary_Driver/Ethernet/W5100S/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/DHCP/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/DNS/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/FTPClient/: CMakeLists.txt  ftpc.c  ftpc.h
libraries/ioLibrary_Driver/Internet/FTPServer/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/MQTT/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/MQTT/MQTTPacket/src/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/SNTP/: CMakeLists.txt
libraries/ioLibrary_Driver/Internet/httpServer/: CMakeLists.txt
libraries/mbedtls/: CMakeLists.txt
libraries/pico-extras/src/rp2_common/lwip/: CMakeLists.txt
patches/: 0001-Edit-lwiperf-in-pico-extras.patch  01-iolibrary_driver_ethernet_chip.patch  02-iolibrary_driver_ftp_client.patch  03_pico-extras_lwip_cmakelists.patch  04_pico-extras_dns.patch  05_pico-extras_opt.patch
port/: CMakeLists.txt
port/ioLibrary_Driver/: CMakeLists.txt  w5x00_spi.c  w5x00_spi.h
port/lwip/: lwipopts.h  w5x00_lwip.c  w5x00_lwip.h
port/mbedtls/inc/: w5x00_ssl.h
port/mbedtls/src/: w5x00_ssl.c
port/timer/: CMakeLists.txt  timer.c  timer.h
